<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <!--
      List of Book Titles
  -->
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:id="@+id/scrollTitles"
      android:layout_weight="1">

    <RadioGroup
        android:id="@+id/bookSelectGroup"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

      <RadioButton
          android:id="@+id/dynamicUiBook"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/dynamicUiTitle"
          android:checked="true"
          />

      <RadioButton
          android:id="@+id/android4NewBook"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/android4NewTitle"
          />

      <RadioButton
          android:id="@+id/androidSysDevBook"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/androidSysDevTitle"
          />

      <RadioButton
          android:id="@+id/androidEngineBook"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/androidEngineTitle"
          />

      <RadioButton
          android:id="@+id/androidDbProgBook"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/androidDbProgTitle"
          />
    </RadioGroup>
  </ScrollView>
  <!--
      Description of selected book
  -->
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:id="@+id/scrollDescription"
      android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dynamicUiDescription"
        android:id="@+id/bookDescription"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="fill_horizontal"/>
  </ScrollView>
</LinearLayout>